worked on tex file, intro

--- a/electron.tex
+++ b/electron.tex
@@ -7,7 +7,7 @@
 \usepackage{subcaption}
 \hbadness=99999
 
-\title{PHY224 Execrise 5 lab report}
+\title{Investigation into the charge to mass ratio of an electron}
 \author{Di Yan Xu, Rickie Li}
 \date{\today}
 
@@ -16,5 +16,23 @@
 \maketitle
 
 \newpage
+
+\section{Introduction}
+The purpose of this experiment was to determine the charge to mass ratio of an
+electron. This is done by measuring data of electrons which were shot into
+an electromagnetic field and measuring the radius of the resulting circle
+formed by the electrons. The relation is shown as the following
+\begin{align*}
+    \text{insert equation here}
+\end{align*}
+% add more?
+
+\section{Methods}
+Equipment used for the experiment are as follows
+\begin{itemize}
+    \item[-] 
+\end{itemize}
+
+
 
 \end{document}
