--- a/electron.tex
+++ b/electron.tex
@@ -47,9 +47,28 @@ of $\frac{1}{r}$. Doing so we would get
 \section{Methods}
 Equipment used for the experiment are as follows
 \begin{itemize}
-    \item[-] 
+    \item[-] Helmholtz coils
+    \item[-] Glass bulb
+    \item[-] Electron gun
+    \item[-] Leybold 0-300V/6.3V power supply
+    \item[-] 8V D.C. power supply
+    \item[-] Rheostat
+    \item[-] 2x Keysight 34461A6 6$\frac{1}{2}$ Digit Multimeter
+    \item[-] Self-illuminated scale
+    \item[-] Plastic divider
+    \item[-] Banana plug wires
 \end{itemize}
-
+We set up the circuit as it is shown below INSERT CIRCUIT.  We turn off the lights
+in the room and turn on the electron gun for around 30 seconds.  After the 30
+seconds we turn on the Helmholtz coils and begin observing and gathering data on the
+electron beam's trajectory.  Using the self-illuminated scale, we look through the 
+plastic divider to measure the diameter of the beam's trajectory which we later 
+convert to radius.  We do this several times with the current going into the coils 
+kept constant.  Then we do the same thing several more times with the voltage of 
+the 0-300V power supply kept constant.  When doing these we also observe the range 
+of the readings on the ammeter and voltmeter to get the error.  After gathering the 
+data, we observed how the beam's trajectory is affected when we put our phone, tablet, 
+and laptop next to the glass bulb.
 
 
 \end{document}
