--- a/electron.tex
+++ b/electron.tex
@@ -65,7 +65,7 @@ Equipment used for the experiment are as follows
     \item[-] Plastic divider
     \item[-] Banana plug wires
 \end{itemize}
-We set up the circuit as it is shown below INSERT CIRCUIT.  We turn off the lights
+We set up the circuit as it is shown in the lab manual.  We turn off the lights
 in the room and turn on the electron gun for around 30 seconds.  After the 30
 seconds we turn on the Helmholtz coils and begin observing and gathering data on the
 electron beam's trajectory.  Using the self-illuminated scale, we look through the 
