fixed some isues

--- a/electron.tex
+++ b/electron.tex
@@ -83,8 +83,9 @@ We used a self-illuminated scale and a plastic reflector to make measurements
 of the radius of the electron orbit. If we used standard equipment to measure,
 there would be lots of issue with the measurements since the orbit is inside a
 round bulb. By using a self-illuminated scale and plastic reflector, we are able
-to position the scale in a way that it is measuring the reflected orbit, this
-allows us to make more precise measurements and lower the uncertainty.
+create a reflection of the sacle onto the plastic reflector, this reflection
+could be positioned such that it appears in the inside of the bulb thus allowing
+us to get rid of the problem of parallax and measure the orbit.
 \subsubsection*{Investigate the anomalous behaviour of the electron trajectory
 in the case of low accelerating voltage $V$ and high current in coils $I$}
 After running the experiment with a low accelerating voltage and a high current
